# ezomero

./: .buildinfo  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ezomero.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  ezomero.doctree  index.doctree  modules.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: generate_docs.yml  run_tests.yml  run_tests_pr.yml  run_tests_push.yml  upload_to_pypi.yml  upload_to_test_pypi.yml
doc/source/: conf.py
docs/: .buildinfo  ezomero.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  ezomero.doctree  index.doctree  modules.doctree
docs/_sources/: index.rst.txt  modules.rst.txt
docs/_static/: basic.css  pygments.css
docs/sphinx/: create_docs.sh
docs/sphinx/source/: conf.py  ezomero.rst
ezomero/: __init__.py  _ezomero.py  _gets.py  _importer.py  _misc.py  _posts.py  ezomero.py  json_api.py  rois.py
sphinx/: create_docs.sh
tests/: conftest.py  docker-compose.yml  test_connect.py  test_ezimport.py  test_ezomero.py  test_gets.py  test_json_api.py  test_misc.py  test_posts.py  test_puts.py  test_rois.py  test_users_group.py
tests/data/: test_pyramid.ome.tif  vsi-ets-test-jpg2k.vsi
tests/data/_vsi-ets-test-jpg2k_/stack1/: frame_t_0.ets
